assets/css/style.css
/* ... */
.navbar-default .navbar-nav>.active>a {
    border-radius: 0;
    color: #fff;
    background-color: #48929b;
}

.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
    color: #fff;
    background-color: #73b6bf;
}

.btn-info {
	background-color: #73b6bf;
	border-color: #73b6bf;
}
.btn-info:hover {
	background-color: #79c8d2;
	border-color: #73b6bf;
}

.navbar-toggle {
	margin-top: 0px;
	margin-bottom: 0px;
}

.col-right {
    width: 100%; 
    float: right;
}

.navbar {
	padding-left: 0px;
	padding-right: 0px;
}

.navbar-brand {
	margin-right: 1rem;
	margin-left: 1rem;
	color: rgba(0,0,0,.5) !important;
}
.navbar-brand:hover {
	margin-right: 1rem;
	margin-left: 1rem;
	color: #48929b !important;
}

.navbar-collapse {
	padding-top: 0.5rem;
	background-color: #fff;
}

.navbar-toggler {
	margin-right: 1rem;
	margin-left: 1rem;
}

.link-item {
	padding-left: 2rem;
	padding-right: 2rem;
}
.link-item:hover {
	background-color: #f5f5f5;
}
.navbar-dark .link-item:hover {
	background-color: #262626;
}

.dropdown-divider {
	margin: 0px;
}
.navbar-dark .dropdown-divider {
	margin: 0px;
	border-top: 1px solid rgba(255,255,255,.4);
}

.bottom-border {
	border-bottom: 1px solid #dee2e6 !important;
	border-top: none;
}

.navbar-dark .bottom-border {
	border-bottom: 1px solid rgba(255,255,255,.4) !important;
	border-top: none;
}

.dropdown-menu {
	left: 0;
	background-color: transparent;
	border: none;
	padding-top: 0rem;
	padding-bottom: 0rem;
}
.dropdown-toggle {
	padding-left: 2rem !important;
	padding-right: 2rem !important;
}
.dropdown-menu .nav-link {
	padding-left: 3rem;
	padding-right: 3rem;
}
.nav-link:hover {
	background-color: #f5f5f5;
}
.navbar-dark .nav-link:hover {
	background-color: #262626;
}

.nav-search {
	padding: 1rem;
}

.page-scroll .btn-light {
	border: 1px solid rgba(0,0,0,.1);
	background-color: transparent;
	color: rgba(0,0,0,.5);
	margin-top: 5px;
}
.page-scroll .btn-light:focus {
	outline: none;
	box-shadow: none;
	border: 1px solid rgba(0,0,0,.1);
	background-color: transparent;
	color: rgba(0,0,0,.5);
}

.page-scroll .btn-dark {
	border: 1px solid rgba(255,255,255,.4);
	background-color: transparent;
	color: rgba(255,255,255,.8);
	margin-top: 5px;
}
.page-scroll .btn-dark:focus {
	outline: none;
	box-shadow: none;
	border: 1px solid rgba(255,255,255,.4);
	background-color: transparent;
	color: rgba(255,255,255,.8);
}


.cat-search {
	padding-top: 2em;
}

.left-corner {
	position: fixed;
	left: 0;
	bottom: 0;
	margin: 1em;
}

.right-corner {
	position: fixed;
	right: 0;
	bottom: 0;
	margin: 1em;
}


@media only screen and (min-width: 768px) {
	body {
		font-size: 16px;
	}
	p {
		line-height: 1.75;
	}
	
	h3 {
	  font-size: 20px;
	}
}

.navbar-toggler {
	z-index: 1;
}

/*@media(min-width:768px) {*/
    .navbar-light {
        /*padding: 10px 0 15px 0;*/
        border: 0;
        /*background-color: transparent;*/

		background: -webkit-linear-gradient(bottom, rgba(255,255,255,1) 40%, rgba(255,255,255,0.8)  70%, rgba(255,255,255,0.5) 80%, rgba(255,255,255,0)); /* For Safari 5.1 to 6.0 */
		background: -o-linear-gradient(bottom, rgba(255,255,255,1) 40%, rgba(255,255,255,0.8)  70%, rgba(255,255,255,0.5) 80%, rgba(255,255,255,0)); /* For Opera 11.1 to 12.0 */
		background: -moz-linear-gradient(bottom, rgba(255,255,255,1) 40%, rgba(255,255,255,0.8)  70%, rgba(255,255,255,0.5) 80%, rgba(255,255,255,0)); /* For Firefox 3.6 to 15 */
		background: linear-gradient(to bottom, rgba(255,255,255,1) 40%, rgba(255,255,255,0.8)  70%, rgba(255,255,255,0.5) 80%, rgba(255,255,255,0)); /* Standard syntax (must be last) */

        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }
	
	.navbar-dark {
		background-color: transparent;
		padding-top: 0px;
	}
	.navbar-dark .navbar-toggler {
		border-color: rgba(255,255,255,.4);
		position: absolute;
		top: 0.5rem;
		right: 0;
	}
	.navbar-dark .navbar-toggler-icon {
		background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.7%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
	}
	.navbar-dark .navbar-collapse {
		padding-top: 48px;
	}

    .navbar-default .navbar-brand {
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-default .navbar-nav>.active>a {
        border-radius: 3px;
    }

   /* .navbar-default.navbar-shrink {
        padding: 10px 0;
        background-color: #222;
		background: #222;
    }*/

    .navbar-default.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    }
/*}*/

header {
    text-align: center;
    color: #fff;
    background-attachment: scroll;
    background-image: url(../img/header-bg.jpg);
    background-position: center center;
    background-repeat: none;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

header .intro-text {
    padding-top: 100px;
    padding-bottom: 50px;
}

header .intro-text .intro-lead-in {
    margin-bottom: 25px;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 22px;
    font-style: italic;
    line-height: 22px;
}

header .intro-text .intro-heading {
    margin-bottom: 25px;
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 50px;
    font-weight: 700;
    line-height: 50px;
}
/* ... */

